fixed some spacing  Changes to be committed: 	modified:   style-dark.css

--- a/style-dark.css
+++ b/style-dark.css
@@ -285,10 +285,10 @@ div.sidebar {
     position: -webkit-sticky;
     position: sticky;
     top: 40px;
-    width: 25%;
+    width: 20%;
     min-width: 256px;
+    padding-right: 40px;
     /*
-    margin: 10px;
     margin-top: 16px;
     */
     font-size: 18px;
